--- a/builds/player-build/index.html
+++ b/builds/player-build/index.html
@@ -8,13 +8,13 @@
         <!-- <link rel="icon" href="latest-blueblack.ico" type="image/x-icon"/> -->
         <link rel="icon" href="https://studiomusic.herokuapp.com/latest-blueblack.png" type="image/png"/>
         <link rel="manifest" href="manifest.json" />
-        <title>StudioMusic</title>
+        <title>Music For Everyone | StudioMusic</title>
 
-        <!-- <meta property="og:type" content="website">
-        <meta property="og:url" content="https://studiomusic.herokuapp.com">
+        <!-- <meta property="og:type" content="website"> -->
+        <!-- <meta property="og:url" content="https://studiomusic.herokuapp.com"> -->
         <meta property="og:title" content="StudioMusic">
-        <meta property="og:description" content="Music For Everyone">
-        <meta property="og:image" content="https://studiomusic.herokuapp.com/player/latest-blueblack.jpg"> -->
+        <meta property="og:description" content="Music For Everyone | StudioMusic">
+        <meta property="og:image" content="https://studiomusic.herokuapp.com/latest-blueblack.jpg">
     </head>
 
     <body
